changed the jwt sample secret

--- a/config/config.env.env
+++ b/config/config.env.env
@@ -3,7 +3,7 @@ NODE_ENV = development
 MONGO_URI = YOUR_MONGO_URI
 URL = YOUR_URL
 
-JWT_SECRET = hhjoj9302u320klje230
+JWT_SECRET = MAKE_UP_SOME_SECRET
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
