--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-mongo-sanitize": "^2.0.2",
+    "helmet": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
